--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -124,4 +124,9 @@ margin-left: 1rem;
     font-size: 18px;
 }
 
+.exp1{
+    display: flex;
+    flex-direction: row;
+}
 /* End of About Page */
+
